--- a/Emacs.org
+++ b/Emacs.org
@@ -1,4 +1,4 @@
-#+title Emacs Configuration
+#+title: Emacs Configuration
 #+PROPERTY: header-args:emacs-lisp :tangle ~/.emacs.d/init.el
 
 * Table of Contents
